<resources>
    <string name="app_name">RoomTemperature Controller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log In</string>
    <!-- Strings related to login -->

    <string name="email">Email</string>
    <string name="useremail">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type Password</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="userlogin">User LogIn</string>

    <string name="user_phone">Phone No</string>
    <string name="fogotpw">Fogot Passowrd</string>
    <string name="fogotpwtitle">Fogot Passowrd</string>
    <string name="verifycode">6 digit verification code</string>
    <string name="fogotpwemail">Your Email Address</string>
    <string name="verifyreg">Registration Verification</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_fogotpw">Reset Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="tag">RTC</string>

</resources>
