<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FogotPassword"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fogotpw_title"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/titleclr"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/fogotpw_subtitle"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fogotpw_subtitle"
        android:text="@string/fogotpwtitle"
        android:textSize="25sp"
        android:textColor="@color/titleclr"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/fogotpw_email"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/fogotpw_email"
        android:hint="@string/fogotpwemail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_custom"
        android:textSize="15sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fogotpw_rst_btn"
        android:layout_below="@+id/fogotpw_email"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/btn_fogotpw"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fogotpw_errormsg"
        android:textSize="15sp"
        android:textColor="@color/input_error"
        android:fontFamily="@font/roboto_regular"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

</RelativeLayout>